Release notes for xmlBlaster @version@ (http://www.xmlBlaster.org)

Changes for 0.xxx [xx, xxx 2003]
================================

 o Merged basic JMX support from branch jmx_gui

 o BUGFIX: PersistentStore and PersistentQueue have now separate pools. Avoids
   deadlocks when configured with only 1 connection AND msg store AND
   other queues are peeking objects from persistence (for example when both caching).

 o JdbcConnectionPool works now with wait/notify instead of sleep/interrupt

 o Better exception handling in JdbcManagerCommonTable to catch even 
   throwables

 o BUGFIX: Fixed subject id to be without public sessionId in all cases.
   Had severe impact on PtP messages as subject queue name was sometimes
   identical to session queue name.

 o Fixed memory leak in JDBC layer (clear SQLWarnings)
   Has impact on persistent messages only

Changes for 0.846 [26, Apr 2003]
================================

 o Enhanced Python support added by Peter <spex66@gmx.net>
   See xmlBlaster/src/python/README

 o The plugin overview:
   http://www.xmlblaster.org/MessageFlowPubSubOverview.html

 o BUGFIX: sync gap in SubjectInfo.java for PtP messages and offline clients

 o removed I_Queue.take methods
 
 o removed JdbcQueuePlugin. Now only JdbcQueueCommonTablePlugin available. This was
   necessary since maintenance of double code became prohibitive.

 o I_Queue.removeRandom now returns boolean[]

 o CacheQueueInterceptorPlugin synch is now less detailed but more simple
 
 o BUGFIX: deleteAllTransient does only delete own entries 
 
 o BUGFIX: inconsistency between cached numOfEntries and numOfBytes on jdbc fixed

 o http push example updated to be functional for this release

 o Fixed and updated cluster demo

 o BUGFIX: Setting ORB environment for different orb instances

 o BUGFIX: In CORBA NameService lookup

 o BUGFIX: Fixed two synchronize gaps which could lead to
   "The timeout handle is null, no timeout refresh done" exception
