@@ -201,6 +201,7 @@ using namespace org::xmlBlaster::test;
 int main(int args, char ** argv)
 {
    try {
+      org::xmlBlaster::util::Object_Lifetime_Manager::init();
       XMLPlatformUtils::Initialize();
       Global& glob = Global::getInstance();
       glob.initialize(args, argv);
@@ -216,6 +217,7 @@ int main(int args, char ** argv)
       testConnectQos.setUp();
       testConnectQos.testConnectQos();
       testConnectQos.tearDown();
+      org::xmlBlaster::util::Object_Lifetime_Manager::fini();
    }
    catch (XmlBlasterException& ex) {
       std::cout << ex.toXml() << std::endl;
