@@ -116,6 +116,7 @@ using namespace org::xmlBlaster::test;
 int main(int args, char ** argv)
 {
    try {
+      org::xmlBlaster::util::Object_Lifetime_Manager::init();
       XMLPlatformUtils::Initialize();
       Global& glob = Global::getInstance();
       glob.initialize(args, argv);
@@ -128,6 +129,7 @@ int main(int args, char ** argv)
       test.setUp();
       test.testMultipleDrivers();
       test.tearDown();
+      org::xmlBlaster::util::Object_Lifetime_Manager::fini();
    }
    catch (XmlBlasterException& ex) {
       std::cout << ex.toXml() << std::endl;
