@@ -106,6 +106,7 @@ using namespace org::xmlBlaster::test;
 
 int main(int args, char *argv[])
 {
+   org::xmlBlaster::util::Object_Lifetime_Manager::init();
    XMLPlatformUtils::Initialize();
    Global& glob = Global::getInstance();
    glob.initialize(args, argv);
@@ -115,5 +116,6 @@ int main(int args, char *argv[])
    test.testEmbeddedServer();
    test.tearDown();
 
+   org::xmlBlaster::util::Object_Lifetime_Manager::fini();
    return 0;
 }
