@@ -131,6 +131,7 @@ using namespace org::xmlBlaster::test;
 int main(int args, char ** argv)
 {
    try {
+      org::xmlBlaster::util::Object_Lifetime_Manager::init();
       Global& glob = Global::getInstance();
       glob.initialize(args, argv);
 
@@ -139,6 +140,7 @@ int main(int args, char ** argv)
       test.setUp();
       test.testTrim();
       test.tearDown();
+      org::xmlBlaster::util::Object_Lifetime_Manager::fini();
    }
    catch (XmlBlasterException& ex) {
       std::cout << ex.toXml() << std::endl;
